flexboxed my boys, picked a nice top image

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1 id="myName" >Michael Mansourati</h1>
-  <ul>
-    <li>web design</li>
-    <li>music</li>
-    <li>photo</li>
-  </ul>
+  <div class="mainContainer">
+    <img class="topImage" src="images/B&WTuba.jpg">
+    <h1 id="myName" >Michael Mansourati</h1>
+    <ul>
+      <li>web design</li>
+      <li>music</li>
+      <li>photo</li>
+    </ul>
+  </div>
 </body>
 </html>
